--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>3.1.5</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
